Стилизация главной страницы

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,32 @@
-// Начните писать стили здесь
+@import "./variables";
+@import "./fonts";
+@import "./global";
+@import "./page-body";
+@import "./vissually-hidden";
+@import "./main-nav";
+@import "./page-header";
+@import "./logo";
+@import "./page-title";
+@import "./download";
+@import "./img-os-block";
+@import "./characteristic";
+@import "./article";
+@import "./reviews";
+@import "./slider-pager";
+@import "./price";
+@import "./price-headers";
+@import "./price-list";
+@import "./rate";
+@import "./feedback";
+@import "./map";
+@import "./page-form";
+@import "./page-catalog";
+@import "./input-text";
+@import "./checkbox";
+@import "./complex-title";
+@import "./competition";
+@import "./achievements";
+@import "./achievements-block";
+@import "./description-text";
+@import "./main-photo";
+@import "./footer";
