--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,10 +17,13 @@
 @import "./price-headers";
 @import "./price-list";
 @import "./rate";
+@import "./btn-round";
 @import "./feedback";
 @import "./map";
 @import "./page-form";
 @import "./page-catalog";
+@import "./card";
+@import "./range";
 @import "./input-text";
 @import "./checkbox";
 @import "./complex-title";
@@ -29,4 +32,7 @@
 @import "./achievements-block";
 @import "./description-text";
 @import "./main-photo";
+@import "./catalog";
+@import "./post-photo";
+@import "./filter-list";
 @import "./footer";
