--- a/source/sass/download.scss
+++ b/source/sass/download.scss
@@ -55,6 +55,11 @@
   }
 }
 
+.img-os-block__positioning {
+  margin: 0 auto;
+  padding-bottom: 32px;
+}
+
 @media (min-width: $tablet) {
   .download {
     position: relative;
@@ -72,7 +77,7 @@
       height: 100%;
       background: url("../img/back-tablet.jpg") no-repeat bottom center;
       background-size: cover;
-      // z-index: 1;
+      z-index: 1;
     }
     &::after {
       content: "";
@@ -83,7 +88,7 @@
       height: 545px;
       transform: translateX(-50%);
       background: url("../img/hand-phone-tablet.png");
-      // z-index: 2;
+      z-index: 2;
     }
   }
   .download__wrapper {
@@ -100,7 +105,7 @@
   .download__slogan {
     font-size: 40px;
     position: relative;
-    // z-index: 10;
+    z-index: 10;
   }
   .download__link {
     position: relative;
@@ -108,7 +113,7 @@
     margin-bottom: 45px;
     z-index: 10;
   }
-  .img-os-block {
+  .img-os-block__positioning {
     position: relative;
     z-index: 10;
   }
@@ -116,9 +121,43 @@
 
 @media (min-width: $desktop) {
   .download {
+    padding: 210px 0 0 0;
+    min-height: 853px;
     &::before {
       background: url("../img/back-desktop.jpg") no-repeat bottom center;
       background-size: cover;
     }
+    &::after {
+      left: 56%;
+      width: 1050px;
+      height: 645px;
+      background: url("../img/hand-phone-desktop.png") no-repeat bottom;
+      background-size: cover;
+    }
+  }
+
+  .download__container {
+    width: 940px;
+    margin: 0 auto;
+  }
+
+  .download__wrapper {
+    margin-bottom: 35px;
+  }
+
+  .download__slogan {
+    width: 239px;
+    margin: 0 0 0 31px;
+    font-size: 50px;
+    line-height: 68px;
+  }
+
+  .download__link {
+    font-size: 21px;
+    margin: 0 0 69px 0;
+  }
+
+  .img-os-block__positioning {
+    margin: 0;
   }
 }
