--- a/source/sass/page-catalog.scss
+++ b/source/sass/page-catalog.scss
@@ -1,7 +1,14 @@
 .page-catalog {
+  padding: 45px 0 0 0;
   background: $white;
 }
 
 .page-catalog__text {
   padding: 30px 0 30px;
+}
+
+@media (min-width: $tablet) {
+  .page-catalog {
+    padding: 90px 0 0 0;
+  }
 }
