--- a/source/sass/page-header.scss
+++ b/source/sass/page-header.scss
@@ -42,14 +42,17 @@
 
 @media (min-width: $desktop) {
   .page-header {
+    min-height: 110px;
     background-color: rgba(0, 0, 0, 0.3);
-    margin-bottom: -65px;
-    z-index: 1;
+    margin-bottom: -110px;
+    z-index: 2;
   }
 
   .page-header__wrapper {
     display: flex;
     justify-content: flex-end;
+    width: 940px;
+    margin: 0 auto;
     padding: 0;
   }
 
@@ -62,6 +65,6 @@
   }
 
   .logo-header {
-    left: 129px;
+    left: 0;
   }
 }
