--- a/source/sass/btn-round.scss
+++ b/source/sass/btn-round.scss
@@ -17,3 +17,17 @@
     color: rgba(250, 250, 250, 0.3);
   }
 }
+
+.btn-round--cancel {
+  color: rgba(40, 54, 69, 0.1);
+  border-color: rgba(40, 54, 69, 0.1);
+  &:hover {
+    color: rgba(40, 54, 69, 0.3);
+    background-color: transparent;
+    border-color: rgba(40, 54, 69, 0.3);
+  }
+  &:active {
+    background-color: rgba(40, 54, 69, 0.3);
+    color: rgba(250, 250, 250, 0.3);
+  }
+}
