--- a/source/sass/map.scss
+++ b/source/sass/map.scss
@@ -4,5 +4,17 @@
   height: auto;
 }
 
+.map__positioning {
+  position: relative;
+}
+
+.inframe-map {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 @media (min-width: $tablet) {
 }
