Адаптивная сетка для главной страницы

--- a/source/sass/competition.scss
+++ b/source/sass/competition.scss
@@ -1,2 +1,16 @@
 .competition__achievements {
+  padding: 39px 0 1px;
+}
+
+.competition__address {
+  margin: 0 0 43px 0;
+}
+
+.competition__os-block {
+  padding: 38px 0 5px 0;
+}
+
+.competition__submit-block {
+  margin: 0 0 19px 0;
+  padding: 47px 0 0 0;
 }
