--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,6 +9,8 @@
 @import "./page-title";
 @import "./download";
 @import "./img-os-block";
+@import "./input-data";
+@import "./radio";
 @import "./characteristic";
 @import "./article";
 @import "./reviews";
@@ -30,6 +32,11 @@
 @import "./competition";
 @import "./achievements";
 @import "./achievements-block";
+@import "./name-player-block";
+@import "./address";
+@import "./os-block";
+@import "./form-feedback";
+@import "./submit-block";
 @import "./description-text";
 @import "./main-photo";
 @import "./catalog";
