--- a/source/sass/map.scss
+++ b/source/sass/map.scss
@@ -1,3 +1,21 @@
+.map {
+  position: relative;
+  overflow: hidden;
+
+  &::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 1200px;
+    height: 123px;
+    background: url(../img/triangle-map.svg) no-repeat center center;
+    left: 50%;
+    transform: translateX(-50%);
+    top: -77px;
+    z-index: 20;
+  }
+}
+
 .map__image {
   display: block;
   width: 100%;
@@ -8,7 +26,7 @@
   position: relative;
 }
 
-.inframe-map {
+.map__container {
   position: absolute;
   top: 0;
   left: 0;
@@ -16,5 +34,13 @@
   height: 100%;
 }
 
+.map__inframe {
+  width: 100%;
+  height: 100%;
+}
+
 @media (min-width: $tablet) {
+  .map::after {
+    top: -32px;
+  }
 }
